--- a/InvalidateMeasurePerformanceIssue/MainPage.xaml
+++ b/InvalidateMeasurePerformanceIssue/MainPage.xaml
@@ -13,41 +13,47 @@
       <VerticalStackLayout Grid.Row="1" BindableLayout.ItemsSource="{Binding Things}">
         <BindableLayout.ItemTemplate>
           <DataTemplate x:DataType="{x:Type invalidateMeasurePerformanceIssue:Thingwithvisibility}">
-            <invalidateMeasurePerformanceIssue:MyGrid ColumnDefinitions="20,*,Auto" RowDefinitions="1,20,20">
-              <Grid.GestureRecognizers>
-                <TapGestureRecognizer Command="{Binding ToggleVisibilityCommand}" />
-              </Grid.GestureRecognizers>
+            <Grid RowDefinitions="1,*">
               <BoxView Grid.Row="0"
-                       Grid.Column="0"
-                       Grid.ColumnSpan="3"
                        BackgroundColor="Gray"
                        HeightRequest="1"
                        HorizontalOptions="Fill" />
-              <BoxView Grid.Row="1"
-                       Grid.RowSpan="2"
-                       Grid.Column="0"
-                       BackgroundColor="Gray"
-                       WidthRequest="8"
-                       HeightRequest="8"
-                       VerticalOptions="Center" />
-              <Label Grid.Row="1"
-                     Grid.Column="1"
-                     LineBreakMode="TailTruncation"
-                     Text="{Binding Name}" />
-              <Label Grid.Row="2"
-                     Grid.Column="1"
-                     LineBreakMode="TailTruncation"
-                     Text="{Binding Name}" />
-              <BoxView Grid.Row="1"
-                       Grid.RowSpan="2"
-                       Grid.Column="2"
-                       IsVisible="{Binding IsVisible}"
-                       Color="Red"
-                       WidthRequest="8"
-                       HeightRequest="8"
-                       VerticalOptions="Center"
-                       HorizontalOptions="Center" />
-            </invalidateMeasurePerformanceIssue:MyGrid>
+              <invalidateMeasurePerformanceIssue:MyGrid Grid.Row="1"
+                                                        ColumnDefinitions="20,*,Auto"
+                                                        RowDefinitions="20,20"
+                                                        HeightRequest="41"
+                                                        HorizontalOptions="Start">
+                <Grid.GestureRecognizers>
+                  <TapGestureRecognizer Command="{Binding ToggleVisibilityCommand}" />
+                </Grid.GestureRecognizers>
+                <BoxView Grid.Row="0"
+                         Grid.RowSpan="2"
+                         Grid.Column="0"
+                         BackgroundColor="Gray"
+                         WidthRequest="8"
+                         HeightRequest="8"
+                         VerticalOptions="Center" />
+                <Label Grid.Row="0"
+                       Grid.Column="1"
+                       LineBreakMode="TailTruncation"
+                       Text="{Binding Name}"
+                       HeightRequest="20" />
+                <Label Grid.Row="1"
+                       Grid.Column="1"
+                       LineBreakMode="TailTruncation"
+                       Text="{Binding Name}"
+                       HeightRequest="20" />
+                <BoxView Grid.Row="0"
+                         Grid.RowSpan="2"
+                         Grid.Column="2"
+                         IsVisible="{Binding IsVisible}"
+                         Color="Red"
+                         WidthRequest="8"
+                         HeightRequest="8"
+                         VerticalOptions="Center"
+                         HorizontalOptions="Center" />
+              </invalidateMeasurePerformanceIssue:MyGrid>
+            </Grid>
           </DataTemplate>
         </BindableLayout.ItemTemplate>
       </VerticalStackLayout>
